Proyecto3/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: delivereats
  labels:
    name: delivereats
    app: delivereats-platform
    environment: production
