Proyecto3/k8s/11-catalog-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: catalog-db
  namespace: delivereats
spec:
  serviceName: catalog-db-service
  replicas: 1
  selector:
    matchLabels:
      app: catalog-db
  template:
    metadata:
      labels:
        app: catalog-db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: catalog-db-storage
          mountPath: /var/lib/mysql
        - name: init-scripts
          mountPath: /docker-entrypoint-initdb.d
        resources:
          requests:
            memory: "1Gi"
            cpu: "500m"
          limits:
            memory: "2Gi"
            cpu: "1000m"
      volumes:
      - name: catalog-db-storage
        persistentVolumeClaim:
          claimName: catalog-db-pvc
      - name: init-scripts
        configMap:
          name: catalog-db-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-db-service
  namespace: delivereats
spec:
  selector:
    app: catalog-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
  clusterIP: None
