Proyecto3/k8s/30-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: delivereats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/auth-service:v1.0.0
        ports:
        - containerPort: 50051
          name: grpc
        - containerPort: 9101
          name: metrics
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50051
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: delivereats
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "9101"
spec:
  selector:
    app: auth-service
  ports:
  - protocol: TCP
    name: grpc
    port: 50051
    targetPort: 50051
  - protocol: TCP
    name: metrics
    port: 9101
    targetPort: 9101
  type: ClusterIP
