Proyecto3/k8s/31-catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: delivereats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
      - name: catalog-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/catalog-service:v1.0.0
        ports:
        - containerPort: 50052
          name: grpc
        - containerPort: 3002
          name: http
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "700m"
        livenessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 60 # Más tiempo para conectar a Rabbit/Redis
          periodSeconds: 15
        readinessProbe:
          tcpSocket:
            port: 50052
          initialDelaySeconds: 30 # No acepta tráfico hasta estar conectado
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: delivereats
spec:
  selector:
    app: catalog-service
  ports:
  - protocol: TCP
    port: 50052
    targetPort: 50052
    name: grpc
  - protocol: TCP
    port: 3002
    targetPort: 3002
    name: http
  type: ClusterIP
