Proyecto3/k8s/32-orders-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-service
  namespace: delivereats
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orders-service
  template:
    metadata:
      labels:
        app: orders-service
    spec:
      containers:
      - name: orders-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/orders-service:v1.0.0
        ports:
        - containerPort: 50053
          name: grpc
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "700m"
        livenessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50053
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: delivereats
spec:
  selector:
    app: orders-service
  ports:
  - protocol: TCP
    port: 50053
    targetPort: 50053
  type: ClusterIP
