Proyecto3/k8s/33-delivery-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service
  namespace: delivereats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      containers:
      - name: delivery-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/delivery-service:latest
        ports:
        - containerPort: 50054
          name: grpc
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50054
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
  namespace: delivereats
spec:
  selector:
    app: delivery-service
  ports:
  - protocol: TCP
    port: 50054
    targetPort: 50054
  type: ClusterIP
