Proyecto3/k8s/34-notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: delivereats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/notification-service:latest
        ports:
        - containerPort: 50055
          name: grpc
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        livenessProbe:
          tcpSocket:
            port: 50055
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 50055
          initialDelaySeconds: 10
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: delivereats
spec:
  selector:
    app: notification-service
  ports:
  - protocol: TCP
    port: 50055
    targetPort: 50055
  type: ClusterIP
