Proyecto3/k8s/36-fx-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-service
  namespace: delivereats
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fx-service
  template:
    metadata:
      labels:
        app: fx-service
    spec:
      containers:
      - name: fx-service
        image: us-central1-docker.pkg.dev/proyecto-sa-492706/delivereats/fx-service:v1.0
        ports:
        - containerPort: 5000
          name: http
        - containerPort: 50053
          name: grpc
        resources:
          requests:
            memory: "256Mi"
            cpu: "150m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: fx-service
  namespace: delivereats
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "5000"
spec:
  selector:
    app: fx-service
  ports:
  - protocol: TCP
    name: http
    port: 5000
    targetPort: 5000
  - protocol: TCP
    name: grpc
    port: 50053
    targetPort: 50053
  type: ClusterIP
